--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.2",
     "aiortc>=1.14.0",
+    "cv2-enumerate-cameras>=1.3.0",
     "easyrtc>=0.0.2",
     "fastapi>=0.120.0",
     "fastrtc>=0.0.33",
